--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 <body>
 
     <header>
+        <nav>
+        <div class="row">
+            <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+            <ul class="main-nav">
+            <li><a href="#">Food delivery</a></li>
+                 <li><a href="#">Hot it works</a></li>
+                 <li><a href="#">Our cities</a></li>
+                 <li><a href="#">Sign up</a></li>
+            </ul>
+            </div>
+
+        </nav>
         <div class="hero-text-box">
 
             <h1>Goodbye junk food.<br> Hello super healthy meals.</h1>
@@ -34,3 +46,4 @@
 
 
 </html>
+
