--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/Grid.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
     <title>Omnifood</title>
@@ -48,6 +49,7 @@
         </div>
         <div class="row">
         <div class="col span-1-of-4">
+            <i class="ion-heart"></i>
             <h3>Up to 365 days/year</h3>
             <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
             </div>
